--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,6 +1,17 @@
-<%= @cars.each do |car| %>
   <h2><%=car.brand %></h2>
   <h3><%=car.model %></h3>
   <p><%= car.created_at.strftrime("%a %b %e at %l%M %p") %></p>
   <div><%=car.owner.nickname %></div>
+
+<div>
+  <%= simple_form_for [@car, @review] do |f| %>
+  <%= f.input :comment, label: false, placeholder: "Comment here...." %>
+  <%= f.input :rating, collection: 0..5, label: false %>
+  <%= f.submit "Add review" %>
+  <% end %>
+</div>
+
+<%= @car.reviews.each.do |review| %>
+<p><%= review.comment %></p>
+<p><%= "⭐" review.rating %></p>
 <% end %>
