favourites_controller.rb

--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -15,3 +15,7 @@
 <p><%= review.comment %></p>
 <p><%= "⭐" review.rating %></p>
 <% end %>
+
+<%= simple_form_for [@car, @favourite] do |f| %>
+  <%= f.submit "Save to my Garage" %>
+<% end %>
