--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,3 +1,8 @@
 // Import page-specific CSS files here.
-@import "home";
-@import "show";
+@import "alert";
+@import "avatar";
+@import "form_legend_clear";
+@import "navbar";
+@import "card";
+@import "button";
+@import "logo";
