--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <h1>Awesome Garage</h1>
 <div class="banner" style="background-image: url(https://www.supercars.net/blog/wp-content/uploads/2020/07/982782-scaled.jpg)>
   <h2>Your dream garage</h2>
-  <%= link_to "Start here", cars_path, class: "button" %>
+  <%= link_to "Start here", "#", class: "btn btn-gradient" %>
 </div>
 </div>
