--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
   <body>
-    <%= unless controller_name == "pages" %>
+
+    <% unless controller_name == "pages" %>
       <%= render "shared/navbar" %>
     <% end %>
     <%= yield %>
